04/19/23    04:57PM     Can draw a 20x12 grid that fills the terminal, each tile has room for a single character.

            05:29PM     Can now put things in the grid without redrawing the grid!!

04/20/23    02:52PM     Boards can be generated with varying numbers of bombs and be printed into the grid.

            03:51PM     Board generation complete! non-bomb tiles know how many bombs they border, grid is printed nice and in color

04/24/23    03:20PM     Implemented mouse input for left, right, and middle click. When a tile is left clicked, its value is revealed.
                        Currently the game does not end when a bomb is hit and right and middle click don't do anything useful.

04/25/23    11:22AM     When a zero is revealed, all of the tiles around it are also revealed, game ends when bomb is clicked

            03:54PM     middle clicking, flagging, win conditions

04/30/23    03:32PM     title screen

05/01/23    02:37PM     first click will now never be a bomb

            08:16PM     difficulty selection, option to play another game after one is finished